Thoughtlog-Backend.
* Added /thought/new api.

* Integrated unique validator npm package.
